Added url path encoding